<resources>
    <string name="app_name">Custo de Viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_litro">Preço/Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_litro">KMs/Litro</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>

    <string name="invalid_error">Valor Inválido</string>
</resources>